# hello_googletest

./: CMakeLists.txt  CMakelists.txt  Readme.md  Readme.uxf  a.c  a.cmake  a.h  a_mocks.cc  a_mocks.h  a_test.cc  b.c  b.cmake  b.uxf  b_mocks.cc  b_mocks.h  b_test.cc  c.c  c.cmake  c_mocks.cc  c_mocks.h  c_test.cc  component_two.h  hello.c  hello.h  hello_test.cc  main.uxf  mockup.cc  mockup.h
